Added working bluetooth, send and retrieve doc

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,11 @@
 				android:name="android.support.PARENT_ACTIVITY"
 				android:value="csm117.localdocs.EditorActivity"/>
 		</activity>
+		<activity
+			android:name=".DeviceListActivity"
+			android:configChanges="orientation|keyboardHidden"
+			android:label="@string/select_device"
+			android:theme="@android:style/Theme.Holo.Dialog"/>
 	</application>
 
 </manifest>
