--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,10 @@
 				android:value="csm117.localdocs.EditorActivity"/>
 		</activity>
 		<activity
+			android:name=".TextListActivity"
+			android:label="@string/app_name">          
+		</activity>
+		<activity
 			android:name=".DeviceListActivity"
 			android:configChanges="orientation|keyboardHidden"
 			android:label="@string/select_device"
