--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,43 +2,65 @@
 <manifest package="csm117.localdocs"
 		  xmlns:android="http://schemas.android.com/apk/res/android">
 
-	<uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
-	<uses-permission android:name="android.permission.BLUETOOTH"/>
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
+    <uses-permission android:name="android.permission.BLUETOOTH"/>
 
-	<application
-		android:allowBackup="true"
-		android:icon="@mipmap/ic_launcher"
-		android:label="@string/app_name"
-		android:supportsRtl="true"
-		android:theme="@style/AppTheme">
-		<activity
-			android:name=".EditorActivity"
-			android:label="@string/app_name"
-			android:theme="@style/AppTheme.NoActionBar">
-			<intent-filter>
+    <application
+        android:allowBackup="true"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme">
+        <activity
+            android:name=".EditorActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar">
+
+            <intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 
 				<category android:name="android.intent.category.LAUNCHER"/>
 			</intent-filter>
-		</activity>
-		<activity
-			android:name=".MergeActivity"
-			android:label="@string/title_activity_merge"
-			android:parentActivityName=".EditorActivity"
-			android:theme="@style/AppTheme.NoActionBar">
-			<meta-data
-				android:name="android.support.PARENT_ACTIVITY"
-				android:value="csm117.localdocs.EditorActivity"/>
-		</activity>
-		<activity
-			android:name=".TextListActivity"
-			android:label="@string/app_name">          
-		</activity>
-		<activity
-			android:name=".DeviceListActivity"
-			android:configChanges="orientation|keyboardHidden"
-			android:label="@string/select_device"
-			android:theme="@android:style/Theme.Holo.Dialog"/>
-	</application>
+        </activity>
+        <activity
+            android:name=".MergeActivity"
+            android:label="@string/title_activity_merge"
+            android:parentActivityName=".EditorActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="csm117.localdocs.EditorActivity"/>
+
+            <!-- <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter> -->
+        </activity>
+        <activity
+            android:name=".TextListActivity"
+            android:label="@string/app_name">
+        </activity>
+        <activity
+            android:name=".DeviceListActivity"
+            android:configChanges="orientation|keyboardHidden"
+            android:label="@string/select_device"
+            android:theme="@android:style/Theme.Holo.Dialog"/>
+        <activity
+            android:name="csm117.diff.CompareChangeActivity"
+            android:label="@string/title_activity_compare_change"
+            android:parentActivityName=".EditorActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="csm117.localdocs.EditorActivity"/>
+
+            <!-- <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter> -->
+        </activity>
+    </application>
 
 </manifest>
