--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -61,6 +61,8 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter> -->
         </activity>
+		
+		<activity android:name=".Pop"></activity>
     </application>
 
 </manifest>
