--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,9 @@
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
     <uses-permission android:name="android.permission.BLUETOOTH"/>
 
+    <uses-sdk
+        android:minSdkVersion="8"
+        android:targetSdkVersion="11" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
